@@ -77,7 +77,13 @@ Dir.chdir 'bin' do
   bin_files = Dir['*']
 
   bin_files.each do |bin_file|
-    dest_file = File.join bin_dir, bin_file
+    bin_file_formatted = if ARGV.grep(/^--format-executable/).empty? then
+                           bin_file
+                         else
+                           Gem.default_exec_format % bin_file
+                         end
+
+    dest_file = File.join bin_dir, bin_file_formatted
     bin_tmp_file = File.join Dir.tmpdir, bin_file
 
     begin
