@@ -15,6 +15,7 @@ class Gem::Installer
   attr_writer :gem_home
   attr_writer :env_shebang
   attr_writer :ignore_dependencies
+  attr_writer :format_executable
   attr_writer :security_policy
   attr_writer :spec
   attr_writer :wrappers
@@ -54,8 +55,9 @@ class TestGemInstaller < RubyGemTestCase
     @spec.executables = ["my_exec"]
 
     FileUtils.mkdir_p util_gem_bindir(version)
-    exec_file = File.join(util_gem_bindir(version), "my_exec")
-    File.open exec_file, 'w' do |f|
+    exec_file = @installer.formatted_program_filename "my_exec"
+    exec_path = File.join util_gem_bindir(version), exec_file
+    File.open exec_path, 'w' do |f|
       f.puts shebang
     end
   end
@@ -240,6 +242,35 @@ load 'my_exec'
 
     wrapper = File.read installed_exec
     assert_match %r|generated by RubyGems|, wrapper
+  end
+
+  def test_generate_bin_scripts_format
+    @installer.format_executable = true
+    @installer.wrappers = true
+    util_make_exec
+    @installer.gem_dir = util_gem_dir
+
+    Gem::Installer.exec_format = 'foo-%s-bar'
+    @installer.generate_bin
+    assert_equal true, File.directory?(util_inst_bindir)
+    installed_exec = File.join util_inst_bindir, 'foo-my_exec-bar'
+    assert_equal true, File.exist?(installed_exec)
+  ensure
+    Gem::Installer.exec_format = nil
+  end
+
+  def test_generate_bin_scripts_format_disabled
+    @installer.wrappers = true
+    util_make_exec
+    @installer.gem_dir = util_gem_dir
+
+    Gem::Installer.exec_format = 'foo-%s-bar'
+    @installer.generate_bin
+    assert_equal true, File.directory?(util_inst_bindir)
+    installed_exec = File.join util_inst_bindir, 'my_exec'
+    assert_equal true, File.exist?(installed_exec)
+  ensure
+    Gem::Installer.exec_format = nil
   end
 
   def test_generate_bin_scripts_install_dir
